# Learn-Python-Programming-Fourth-Edition

./: README.md
ch01/: names.py  scopes1.py  scopes2.py  scopes3.py  virtualenv.creation.txt  virtualenv.example.txt
ch02/: bytearray.txt  dateandtime.txt  defaultdict.txt  dicts.txt  enum.txt  final_considerations.txt  lists.txt  numbers.txt  objects.txt  sequences.txt  sets.txt
ch03/: any.py  binary.2.py  binary.py  compress.py  conditional.1.py  conditional.2.py  coupons.dict.py  coupons.py  discount.py  errorsalert.py  for.else.py  for.no.else.py  infinite.py  match.py  menu.no.walrus.py  menu.walrus.py  multiple.sequences.enumerate.py  multiple.sequences.py  multiple.sequences.tuple.py  multiple.sequences.unpack.py  multiple.sequences.while.py  multiple.sequences.zip.py  permutations.py  primes.else.py  primes.py  simple.for.2.py  simple.for.3.py  simple.for.4.py  simple.for.py  taxes.py  ternary.py  walrus.if.py
ch04/: arguments.combined.py  arguments.positional.keyword.py  arguments.unpack.dict.py  docstrings.py  filter.lambda.py  filter.regular.py  func.attributes.py  func_from.py  func_import.py  imports.py  key.points.assignment.py  key.points.mutable.assignment.py  matrix.multiplication.func.py  matrix.multiplication.nofunc.py  parameters.all.pkwonly.py  parameters.all.py  parameters.default.py  parameters.defaults.mutable.intermediate.call.py  parameters.defaults.mutable.py  parameters.keyword.only.py  parameters.positional.only.py  parameters.variable.db.py  parameters.variable.positional.py  primes.py  return.multiple.py  scoping.level.1.py  scoping.level.2.global.py  scoping.level.2.nonlocal.py  scoping.level.2.py  vat.nofunc.py
ch09/: hlib.txt  (+1 more)
ch16/railway-project/: .flake8  CHANGELOG.md  LICENSE  README.md  pyproject.toml
ch16/railway-project/src/railway_cli/: __init__.py  __main__.py  cli.py  config.py  exceptions.py
ch16/railway-project/src/railway_cli/api/: __init__.py  client.py  schemas.py
ch16/railway-project/src/railway_cli/commands/: __init__.py  admin.py  base.py  stations.py
ch16/railway-project/test/: __init__.py  test_get_station.py
ch16/skeleton-project/: pyproject.toml
ch16/skeleton-project/src/example/: __init__.py
ch16/skeleton-project/tests/: __init__.py
(+234 files in other folders)
