[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "your-projec-name"
authors = [
  {name="Your Name", email="your.email@example.com"},
]
version = "0.0.0"
description = "A short description of your project"
readme = "README.md"

[project.urls]
Homepage = "https://example.com/your/project"

[project.optional-dependencies]
test = [
    "pytest"
]
